--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.9.1",
     "@svgr/webpack": "^5.4.0",
     "next": "9.5.2",
+    "next-pwa": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
