add icons to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,16 @@
 {
+    "name": "Irregular Verbs",
+    "short_name": "iVerbs",
     "theme_color": "#2196f3",
     "background_color": "#2196f3",
-    "display": "browser",
+    "display": "fullscreen",
     "scope": "/",
-    "start_url": "https://iverbs.vercel.app/",
-    "icons": [{
-        "src": "icons/512.png",
+    "start_url": "/",
+    "icons": [
+      {
+        "src": "/icons/512.png",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       }]
   }
