--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#2196f3",
     "display": "fullscreen",
     "scope": "/",
-    "start_url": "/",
+    "start_url": "/?source=pwa",
     "icons": [
       {
         "src": "/icons/512.png",
